--- a/Assignments/Assignment-19/wallet.ipynb
+++ b/Assignments/Assignment-19/wallet.ipynb
@@ -268,7 +268,7 @@
    "metadata": {},
    "source": [
     "This is our target address and its balance before transaction.\n",
-    "![Target Address](Images/target_address.png)"
+    "![Target Address](target_address.png)"
    ]
   },
   {
@@ -345,7 +345,7 @@
    "metadata": {},
    "source": [
     "As you can see in this image, TX HASH and the cryptographic code that we get after executing send_txn function are the same!\n",
-    "![Transaction Hash](Images/signed_transaction.png)"
+    "![Transaction Hash](signed_transaction.png)"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "metadata": {},
    "source": [
     "This is our target address and its balance after transaction. The balance changed by 1 ether after signing the transaction.\n",
-    "![Transaction Hash](Images/target_address_after.png)"
+    "![Transaction Hash](target_address_after.png)"
    ]
   },
   {
